--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,6 @@
 			<version>3.2</version>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -60,7 +59,6 @@
 			</plugin>
 		</plugins>
 	</build>
-	
 	<profiles>
 		<profile>
 			<id>sonar</id>
@@ -68,7 +66,9 @@
 					<activeByDefault>true</activeByDefault>
 				</activation>
 				<properties>
-					<sonar.host.url>http://localhost:9000</sonar.host.url>
+					<sonar.host.url>
+					http://ip172-18-0-86-c8hdq2dmrepg00crar50-9100.direct.labs.play-with-docker.com
+					</sonar.host.url>
 			</properties>
 		</profile>
 </profiles>
