--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>apiserver</groupId>
-	<artifactId>api</artifactId>
+	<artifactId>apidemoGithubAction</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>api</name>
@@ -67,8 +67,9 @@
 				</activation>
 				<properties>
 					<sonar.host.url>
-					http://ip172-18-0-86-c8hdq2dmrepg00crar50-9100.direct.labs.play-with-docker.com
+					http://ip172-18-0-89-c8o8qj5mrepg00avpcv0-9003.direct.labs.play-with-docker.com/
 					</sonar.host.url>
+					<sonar.login>c612134dcac79f69c60b4dbcf3a248f9620ef8d5</sonar.login>
 			</properties>
 		</profile>
 	</profiles>
