--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,10 @@
 		    <artifactId>jacoco-maven-plugin</artifactId>
 		    <version>0.8.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
